terf/modules/alb/security.tf
# 1. ALB Security Group 
resource "aws_security_group" "alb_sg" {
  name        = "alb-security-group" # make new name to avoid collision with the old one
  description = "Allow HTTP and HTTPS traffic to ALB"
  vpc_id = var.vpc_id

  # Add lifecycle protection: create new first, then delete old.
  lifecycle {
    create_before_destroy = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Add Port 80 rule (independent)
resource "aws_security_group_rule" "alb_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alb_sg.id
}

# Add Port 443 rule (independent)
resource "aws_security_group_rule" "alb_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alb_sg.id
}

# 2. ECS 的 Security Group
resource "aws_security_group" "ecs_sg" {
  name   = "ecs-task-security-group"
  vpc_id = var.vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
